--- a/assets/scss/_offcanvas.scss
+++ b/assets/scss/_offcanvas.scss
@@ -46,7 +46,7 @@ body{
 }
 
 .oc-push {
-  @include transform(rotate(0deg));
+  // @include transform(rotate(0deg));
 }
 
 .oc-content,
